modules/cli/src/test/resources/good/todo/Recursion10.scr
module parsing.globals.grecursion.Recursion10;


global protocol Recursion10(role A, role B, role C)
{
	rec X
	{
		/* // TODO:
		par
		{
			l1() from A to B;
		}
		and
		{
			l2() from C to A;
		}*/
		continue X;
	}
}

